<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY license_apache "Licensed under the Apache License, Version 2.0 (the License)
    \nyou may not use this file except in compliance with the License. You may obtain a copy of
    the License at
    \n\n\t\thttp://www.apache.org/licenses/LICENSE-2.0 \n\nUnless required by applicable law or
    agreed to in writing, software distributed under the License is distributed on an AS IS BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for
    the specific language governing permissions and limitations under the License." >]>
<resources>

    <!-- general terms -->
    <string name="dev_email" translatable="false">bytesculptor@gmail.com</string>
    <string name="szSettings">Settings</string>
    <string name="szNotifications">Notifications</string>
    <string name="notif_setting">Notification settings</string>
    <string name="set_notif_settings">Set visibility, sound and vibration</string>
    <string name="szStatistics" translatable="false">Statistics</string>
    <string name="szInfo" translatable="false">info</string>
    <string name="szSearch" translatable="false">Search</string>
    <string name="szHint">hint</string>
    <string name="szHistory">History</string>
    <string name="szTts" translatable="false">Text-to-speech</string>
    <string name="btTtsOptions" translatable="false">Text-to-speech settings</string>
    <string name="szWelcome">Welcome!</string>
    <string name="szGood">good</string>
    <string name="app_theme">Theme</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_system">System default</string>


    <!-- confirmation -->
    <string name="szGotIt" translatable="false">OK!</string>
    <string name="szOk" translatable="false">OK</string>
    <string name="szYes">yes</string>
    <string name="szNo">no</string>
    <string name="szNoCancel">No, cancel</string>
    <string name="szOff">off</string>
    <string name="szOn">on</string>
    <string name="szShowMe">Show me</string>


    <!-- actions -->
    <string name="szClose">close</string>
    <string name="szCancel">Cancel</string>
    <string name="szAbort" translatable="false">abort</string>
    <string name="szSave">Save</string>
    <string name="szSaved" translatable="false">Saved</string>
    <string name="szEdit" translatable="false">edit</string>
    <string name="szPlay" translatable="false">Play</string>
    <string name="szRename" translatable="false">rename</string>
    <string name="szCreate" translatable="false">Create</string>
    <string name="szDelete">delete</string>
    <string name="szDeleted" translatable="false">deleted</string>
    <string name="szMerge" translatable="false">Merge</string>
    <string name="szAll" translatable="false">all</string>
    <string name="share_app">Share this app</string>


    <!-- files -->
    <string name="szFileName" translatable="false">file name</string>
    <string name="szOpenFile" translatable="false">open file</string>
    <string name="szSaveFile" translatable="false">save file</string>
    <string name="szImp" translatable="false">import</string>
    <string name="szExp" translatable="false">export</string>
    <string name="szDeleteAllData" translatable="false">Yes, delete all data</string>


    <!-- sorting -->
    <string name="szSort" translatable="false">sort</string>
    <string name="AZ" translatable="false">A..Z</string>
    <string name="ZA" translatable="false">Z..A</string>


    <!-- time -->
    <string name="szOneWeek" translatable="false">1 week</string>
    <string name="szToday" translatable="false">today</string>
    <string name="szOneMonth" translatable="false">1 month</string>
    <string name="szThreeMonth" translatable="false">3 month</string>
    <string name="szSixMonth" translatable="false">6 month</string>
    <string name="szOneYear" translatable="false">1 year</string>
    <string name="szLater">later</string>
    <string name="btNext" translatable="false">next</string>


    <!-- app rating -->
    <string name="szRateThisApp">Rate this app</string>
    <string name="szLikeThisAppTitle">Enjoying this app?</string>
    <string name="szLikeThisAppMessage">How is your experience so far? Do you like this app?</string>
    <string name="szAskFeedbackMessage">We are very sorry! Would you like to send feedback so that we improve the app?</string>
    <string name="szLikeThisAppNo">Not so much</string>
    <string name="szRatingMessage">Would you please take a moment to rate this app? Thanks for your support!</string>
    <string name="szRateNow">Rate now</string>
    <string name="szRemindMe">Remind me</string>
    <string name="szNoThanks">No, thanks</string>


    <!-- help -->
    <string name="szHelp">Help</string>
    <string name="szIntroduction">Introduction</string>
    <string name="szAbout">About</string>
    <string name="szFeedback">Send feedback</string>
    <string name="szAppVersion">App Version</string>
    <string name="szMoreApps" translatable="false">Byte Sculptor Apps</string>
    <string name="szContact">Contact</string>
    <string name="szFaq" translatable="false">FAQ</string>
    <string name="szContactIntro">Many users try to contact me through the app\'s rating system in Google Play Store. Unfortunately, the
        developer\'s answer space is limited by Google. For better support, please write to:</string>
    <string name="open_source_licenses" translatable="false">Open source licenses</string>

    <string name="szDisclaimer1"></string>
    <string name="szDisclaimer2">
        Byte Sculptor Software owns the rights to this application and changes could be made at any time.
        This app has been tested manually and automatically on real and emulated devices for bugs, errors and stability.
        However, this does not mean that the software is completely free from errors.
        The Android OS is used on many different devices and is often heavily modified by the device manufacturer. It is possible that this app may not run as expected on such devices.
        \n\nBy using this software you agree that Byte Sculptor Software is not responsible for any damage done to your device. You use this app completely at your own risk.
        \nIf you encounter any problems please let us know by sending an email with details on the issue, your device model and Android version. Thank you!
    </string>
    <string name="szDisclaimer3"></string>


    <!-- licenses -->
    <string name="szLicensesHeader" translatable="false">This app currently uses the following open source software:</string>
    <string name="szHeaderLic1" translatable="false">Material design icons</string>
    <string name="szCopyRightLic1" translatable="false">Copyright 2016 Google</string>
    <string name="szHeaderLic2" translatable="false">MPAndroidChart</string>
    <string name="szCopyRightLic2" translatable="false">Copyright 2015 Philipp Jahoda</string>
    <string name="szTextLic1" translatable="false">&license_apache;</string>
    <string name="szTextLic2" translatable="false">&license_apache;</string>


    <!-- navigation drawer -->
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="navigation_drawer_open" translatable="false">open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">close navigation drawer</string>
    <string name="errorOnOpenPrivacyPolicyLink">Error. Check the app store for the privacy policy.</string>
    <string name="szDisclaimer">Disclaimer</string>
    <string name="szPrivacyPolicy">Privacy Policy</string>


</resources>