<!--
  ~ Copyright 2020 Byte Sculptor Software
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <Preference
            app:icon="@drawable/ic_help"
            app:key="HELP_PREF_MANUAL"
            app:title="@string/szHelp" />

        <Preference
            app:icon="@drawable/ic_email"
            app:key="HELP_PREF_SEND_FEEDBACK"
            app:title="@string/szFeedback" />

        <Preference
            app:icon="@drawable/ic_android"
            app:key="HELP_PREF_VISIT_IN_PLAY_STORE"
            app:title="@string/szVisitInPlayStore" />

        <Preference
            app:icon="@drawable/ic_share"
            app:key="HELP_PREF_SHARE_APP"
            app:title="@string/share_app" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/szAbout">

        <Preference
            app:key="HELP_PREF_APP_VERSION"
            app:title="@string/szAppVersion"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="HELP_PREF_PRIVACY_POLICY"
            app:title="@string/szPrivacyPolicy" />

        <Preference
            app:key="HELP_PREF_DISCLAIMER"
            app:title="@string/szDisclaimer" />

        <Preference
            app:key="HELP_PREF_OPEN_SOURCE"
            app:title="@string/open_source_licenses" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Byte Sculptor Software">

        <Preference
            app:key="HELP_PREF_MORE_APPS"
            app:title="@string/szMoreApps" />

        <Preference
            app:key="HELP_PREF_BSS_WEBSITE"
            app:title="@string/szWebsite" />

    </PreferenceCategory>

    <PreferenceCategory></PreferenceCategory>

</androidx.preference.PreferenceScreen>