<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 - 2021  Byte Sculptor Software  - All Rights Reserved
  ~
  ~ All information contained herein is and remains the property of Byte Sculptor Software.
  ~ Unauthorized copying of this file, via any medium, is strictly prohibited unless prior
  ~ written permission is obtained from Byte Sculptor Software.
  ~
  ~ Romeo Rondinelli - bytesculptor@gmail.com
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/tvHeaderLicenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:paddingTop="4dp"
            android:text="@string/szLicensesHeader"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvHeaderLic1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/szHeaderLic1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvCopyRightLic1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/szCopyRightLic1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvTextLic1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:paddingBottom="8dp"
            android:text="@string/szTextLic1"
            android:textIsSelectable="true"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvHeaderLic2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/szHeaderLic2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCopyRightLic2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/szCopyRightLic2"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTextLic2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:paddingBottom="8dp"
            android:text="@string/szTextLic2"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btMoreLicenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="more licenses"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</ScrollView>