<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 - 2021  Byte Sculptor Software  - All Rights Reserved
  ~
  ~ All information contained herein is and remains the property of Byte Sculptor Software.
  ~ Unauthorized copying of this file, via any medium, is strictly prohibited unless prior
  ~ written permission is obtained from Byte Sculptor Software.
  ~
  ~ Romeo Rondinelli - bytesculptor@gmail.com
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="32dp">

        <TextView
            android:id="@+id/tvDisclaimer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/szDisclaimer1"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDisclaimer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/szDisclaimer2"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDisclaimer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/szDisclaimer3"
            android:textIsSelectable="true"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tvFeedbackMailLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:paddingBottom="8dp"
            android:text="@string/dev_email"
            android:textColor="@android:color/holo_blue_dark"
            android:textIsSelectable="true"
            android:textSize="28sp" />

    </LinearLayout>
</ScrollView>